Changed Email to info

--- a/ProjektDNDImpresum/index.html
+++ b/ProjektDNDImpresum/index.html
@@ -28,7 +28,7 @@
             <p><strong>Yves Cornu</strong></p>
             <p>8554 Bonau</p>
             <p>Gehrauerstrasse 16</p>
-            <p>Email: <a href="mailto:yves@cornu.tech">yves@cornu.tech</a></p>
+            <p>Email: <a href="mailto:info@cornu.tech">info@cornu.tech</a></p>
             <h2>Quellenangaben</h2>
             <p>Alle Bilder wurden mit Hilfe von <a href="https://chatgpt.com/">ChatGPT</a>  generiert.</p>
             <p>Videos sind aus der <a href="https://stock.adobe.com/ch_de/">Adobe Stock Libery</a> </p>
