Chang eLink fore Nav Bar

--- a/ProjektDNDImpresum/index.html
+++ b/ProjektDNDImpresum/index.html
@@ -17,7 +17,7 @@
             <li><a href="../ProjektDNDabout/index.html">Über uns</a></li>
             <li><a href="../ProjektDNDfeatures/index.html">Features</a></li>
             <li><a href="../ProjektDNDcontact/index.html">Kontakt</a></li>
-            <li><a href="../ProjektDNDimpressum/index.html" class="active">Impressum</a></li>
+            <li><a href="/ProjektDNDImpresum/index.html" class="active">Impressum</a></li>
         </ul>
     </nav>
 </header>
